Minor spacing fixes

--- a/css/profile.css
+++ b/css/profile.css
@@ -5,7 +5,7 @@
 .profile-icon {
   display: inline-block;
   vertical-align: top;
-  margin: 12px;
+  margin: 0 12px 12px;
 }
 
 .profile-body {
